# Anvil

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: AnvilConfig.cmake.in  anvil.pc.in
examples/: CMakeLists.txt
examples/testing/: benchmark.c  printing.c  testing_setup.h
include/algorithms/: hash.h
include/anvil/: algorithms.h  anvil.h  common.h  containers.h  io.h  math.h  memory.h  strings.h  system.h  testing.h
include/anvil/algorithms/: hash.h
include/anvil/common/: allocator.h  platform.h  types.h  version.h
include/anvil/containers/: arraylist.h  binarysearchtree.h  doublylinkedlist.h  dynamicstring.h  hashmap.h  hashset.h  iterator.h  pair.h  queue.h  singlylinkedlist.h  stack.h
include/anvil/io/: file.h  print.h
include/anvil/memory/: arena.h  stack_frame.h
include/anvil/system/: mutex.h  thread.h  timing.h
include/anvil/testing/: assertions.h  benchmark.h  fixtures.h  suite.h  types.h
include/common/: allocator.h  common.h  platform.h  result.h  types.h  version.h
include/containers/: arraylist.h  binarysearchtree.h  doublylinkedlist.h  dynamicstring.h  hashmap.h  hashset.h  iterator.h  pair.h  queue.h  singlylinkedlist.h  stack.h
include/system/: mutex.h  system.h  thread.h  threads.h
include/testing/: assertions.h  benchmarks.h  fixtures.h  suite.h  testing.h
src/algorithms/: hash.c
src/common/: allocator.c  result.c  version.c
src/containers/: arraylist.c  binarysearchtree.c  doublylinkedlist.c  dynamicstring.c  hashmap.c  hashset.c  iterator.c  pair.c  queue.c  singlylinkedlist.c  stack.c
src/io/: file.c  print.c
src/memory/: arena.c  stack_frame.c
src/system/: mutex.c  thread.c  threads.c  timing.c
src/testing/: assertions.c  benchmark.c  suite.c
tests/: TestAssert.h  TestHelper.c  TestHelpers.h  test_alloc_advanced.c  test_alloc_custom.c  test_arraylist_algorithms.c  test_arraylist_crud.c  test_arraylist_iterator.c  test_arraylist_memory.c  test_arraylist_properties.c  test_bst_algorithms.c  test_bst_crud.c  test_bst_iterator.c  test_bst_memory.c  test_bst_properties.c  test_dll_algorithms.c  test_dll_crud.c  test_dll_iterator.c  test_dll_memory.c  test_dll_performance.c  test_dll_properties.c  test_hashmap_algorithms.c  test_hashmap_crud.c  test_hashmap_iterator.c  test_hashmap_memory.c  test_hashmap_memory_safe.c  test_hashmap_performance.c  test_hashmap_properties.c  test_hashset.c  test_hashset_algorithms.c  test_hashset_crud.c  test_hashset_iterator.c  test_hashset_memory.c  test_hashset_performance.c  test_hashset_properties.c  test_iterator_chain.c  test_iterator_chains.c  test_iterator_copy.c  test_iterator_enumerate.c  test_iterator_filter.c  (+33 more)
